<resources>
    <string name="app_name">MobTerminal</string>

    <string name="some_error">Some Error Occurred!</string>
    <string name="exit">ВЫХОД</string>
    <string name="scan_your_code">Отсканируйте свой штрихкод: </string>
    <string name="enter_your_pin">Введите свой Pin-код: </string>
    <string name="login">Логин</string>
    <string name="enter">войти</string>
    <string name="sort">сортировка</string>
    <string name="close_cell">закрытие ячейки</string>
    <string name="config_printer">Настройка принтера</string>

    <string name="btnScannerSelectBarcode">Scanner Selection Example</string>
    <string name="btnSwitchScanners">Switch Scanners</string>
    <string name="txtBarcodeTitle">Press the device\'s scan button to scan a barcode.</string>
    <string name="scan_package">Сканируйте ШПИ РПО</string>
    <string name="your_code">ваш штрихкод</string>
    <string name="scan_bag">Сканируйте ШПИ мешка</string>
    <string name="enter_seal">Введите номер пломбы</string>
    <string name="enter_weight">Введите вес</string>
    <string name="back">назад</string>
    <string name="next">далее</string>
    <string name="chose_printer">Выбор принтера</string>
    <string name="repeat_label_print">печать ярлыка</string>
    <string name="no_user_barcode">нет баркода оператора</string>
    <string name="pin">Пин-код</string>
    <string name="cell_tracknumber">ШПИ ячейки</string>
    <string name="dest_tracknumber">ШПИ отправления</string>
    <string name="cell_number">Номер ячейки</string>
    <string name="scan_cell">Отсканируйте ШПИ ячейки</string>

    <string name="g_number">Номер G-накладной:</string>
    <string name="seal_number">Номер пломбы:</string>
    <string name="bag_weight">Вес мешка:</string>
    <string name="operator_name">ФИО оператора:</string>
    <string name="bag_close_time">Время закрытия мешка:</string>
    <string name="to_dep_index">Индекс пункта назначения:</string>
    <string name="to_dep_name">Название пункта назначения:</string>
    <string name="pin_length">Пин-код должен состоять из 4-х символов</string>
    <string name="ip_address">ip-адрес принтера</string>
    <string name="printer_name">Принтер</string>
    <string name="scanipname">Для выбора принтера введите ip-адрес и название принтера</string>
    <string name="dialog_exit_message">Вы действительно хотите выйти?</string>
    <string name="bag_is_closed">Мешок закрыт</string>
    <string name="wrong_g">Неверный номер G-накладной</string>
    <string name="go_to_main">В главное меню</string>
    <string name="test_print">Тестовая печать</string>
    <string name="save_printer">Выбрать принтер</string>
    <string name="sort_open_bag">Сортировка Открытого Мешка</string>
    <string name="sort_saktandiry">Сортировка Сактандыру</string>
    <string name="ip_address_server_hint">ip-адрес сервера</string>
    <string name="success_close_open_bag">Открытый мешок успешно закрыт</string>
    <string name="close_open_bag">Закрыть мешок</string>
    <string name="choose_close_activity">Выберите тип мешка, который хотите закрыть</string>
    <string name="insurance">Сактандыру</string>
    <string name="open_bag">Открытый мешок</string>
    <string name="letter_post">Письменная корреспонденция</string>
</resources>
