<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="kazpost.kz.mobterminal.ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/ll1_main"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sort"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/sort_saktandiry" />

        <Button
            android:id="@+id/btn_close_cell"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/close_cell" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2_main"
        android:layout_below="@id/ll1_main"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sort_open_bag"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/sort_open_bag" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/ll2_main"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_config_printer"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/config_printer" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/exit" />

    </LinearLayout>

    <TextView
        android:text="Версия: "
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
